try to fix the overflow date picker in delivery history

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -252,13 +252,16 @@ text-area {
 .one-line {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .one-line>* {
   padding-left: 0.2em;
   padding-right: 0.2em;
-  flex-basis: 1px;
+  flex-basis: auto;
   flex-grow: 1;
+  min-width: 0;
 }
 
 .one-line> :first-child {
